--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>smile | home</title>
+    <title>ictionary | home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;400;600;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"/>
-    <link href="{{ url_for('static', filename='smile.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='dictionary.css') }}" rel="stylesheet">
 </head>
 
 <body>
 <nav>
     <div class="container">
-        <div class="navbar-brand">smile.</div>
+        <div class="navbar-brand">ictionary.</div>
         <div class="navbar-links">
             <a href="/">home</a>
             <a href="/menu/1">menu</a>
@@ -24,7 +24,7 @@
 </nav>
 <div class="container">
     <header>
-        <h1>smile</h1>
+        <h1>ictionary</h1>
         <h2>{% block pageheading %}{% endblock %}</h2>
     </header>
 
