--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -16,8 +16,7 @@
         <div class="navbar-brand">ictionary.</div>
         <div class="navbar-links">
             <a href="/">home</a>
-            <a href="/menu/1">menu</a>
-            <a href="/contact">contact</a>
+            <a href="/dictionary">dictionary</a>
             <a href="/login">login</a>
         </div>
     </div>
