--- a/flaskProject/templates/home.html
+++ b/flaskProject/templates/home.html
@@ -1,7 +1,9 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block pageheading %}welcome{% endblock %}
+{% block title %}Maōri Dictionary | Home{% endblock %}
+
+{% block heading %}Maōri - English Dictionary{% endblock %}
 
 {% block main %}
-<strong><em>Hello World</em></strong>
+
 {% endblock %}
