fixed up the base.html a bit.

--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -21,10 +21,14 @@
 			<span></span>
 			<span></span>
 			<span></span>
-			<ul>
-                <li><a href="\">Home</a></li>
-
-			</ul>
+			<div class="container">
+				<div class="navbar-brand">ictionary.</div>
+					<div class="navbar-links">
+						<a href="/">home</a>
+						<a href="/dictionary">dictionary</a>
+						<a href="/login">login</a>
+					</div>
+			</div>
 		</nav>
 
 
