--- a/flaskProject/templates/signup.html
+++ b/flaskProject/templates/signup.html
@@ -27,6 +27,10 @@
         <div class="form-label">Confirm Password:</div>
         <div class="form-element"><input type="password" name="password2" id="password2" required></div>
     </div>
+    <div class="form-group">
+         <input type="radio" name="user-type" id="student" value="1" required>
+        <input type="radio" name="user-type" id="teacher" value="2" required>
+    </div>
     <div class="error">{{ error }}</div>
     <div class="form-group">
         <div class="form-label"></div>
