--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -22,10 +22,13 @@
 			<span></span>
 			<span></span>
 			<div class="container">
-				<div class="navbar-brand">ictionary.</div>
+				<div class="navbar-brand">Dictionary.</div>
 					<div class="navbar-links">
 						<a href="/">home</a>
-						<a href="/dictionary">dictionary</a>
+                        {% for category in categories %}
+                        <a href="/category/{{ category[0] }}">{{ category[1] }}</a><br>
+                        {% endfor %}
+
 						{% if logged_in == None %}
 						<a href="/login">login</a>
 						{% else %}
