--- a/flaskProject/templates/dictionary.html
+++ b/flaskProject/templates/dictionary.html
@@ -3,13 +3,29 @@
 {% block pageheading %}Dictionary{% endblock %}
 
 {% block main %}
-{% for word in words %}
+
 <div class="word-block">
-    <p>{{ word[1] }}</p>
-    <p>{{ word[2] }}</p>
-    <p>{{ word[4] }}</p>
-    <p>{{ word[5] }}</p>
+    <table>
+        <thead>
+            <tr>
+                <td>Maori Word</td>
+                <td>Translation</td>
+                <td>Level</td>
+            </tr>
+
+        </thead>
+        <tbody>
+        {% for word in words %}
+            <tr>
+                <td>{{ word[1] }}</td>
+                <td>{{ word[2] }}</td>
+                <td>{{ word[5] }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
 </div>
-{% endfor %}
+
 
 {% endblock %}
