--- a/flaskProject/templates/dictionary.html
+++ b/flaskProject/templates/dictionary.html
@@ -10,6 +10,7 @@
             <tr>
                 <td>Maori Word</td>
                 <td>Translation</td>
+                <td>Definition</td>
                 <td>Level</td>
             </tr>
 
@@ -17,8 +18,9 @@
         <tbody>
         {% for word in words %}
             <tr>
-                <td>{{ word[1] }}</td>
+                <td><a href="/worddisplay">{{ word[1] }}</a></td>
                 <td>{{ word[2] }}</td>
+                <td>{{ word[4] }}</td>
                 <td>{{ word[5] }}</td>
             </tr>
         {% endfor %}
