When you click on a word you get brought to a page that shows all the details and an image.

--- a/flaskProject/templates/dictionary.html
+++ b/flaskProject/templates/dictionary.html
@@ -18,7 +18,7 @@
         <tbody>
         {% for word in words %}
             <tr>
-                <td><a href="/worddisplay">{{ word[1] }}</a></td>
+                <td><a href="/worddisplay/{{word[0]}}">{{ word[1] }}</a></td>
                 <td>{{ word[2] }}</td>
                 <td>{{ word[4] }}</td>
                 <td>{{ word[5] }}</td>
