Displays the last edit time(for now just the input time)

--- a/flaskProject/templates/worddisplay.html
+++ b/flaskProject/templates/worddisplay.html
@@ -27,6 +27,7 @@
                 <td>{{ credential[5] }}</td>
                 <td><img src="/static/images/{{ credential[6] }}"></td>
                 <td>{{ credential[7] }}</td>
+                <td>{{ credential[8] }}</td>
             </tr>
         {% endfor %}
         </tbody>
