--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -34,6 +34,7 @@
 						{% else %}
 						<a href="/login">Switch Accounts</a>
 						{%endif%}
+						<a href="/addword">Add A Word</a>
 					</div>
 			</div>
 		</nav>
