--- a/flaskProject/templates/signup.html
+++ b/flaskProject/templates/signup.html
@@ -28,7 +28,8 @@
         <div class="form-element"><input type="password" name="password2" id="password2" required></div>
     </div>
     <div class="form-group">
-         <input type="radio" name="user-type" id="student" value="1" required>
+        <div class="form-label">Student or Teacher:</div>
+        <input type="radio" name="user-type" id="student" value="1" required>
         <input type="radio" name="user-type" id="teacher" value="2" required>
     </div>
     <div class="error">{{ error }}</div>
