--- a/flaskProject/templates/worddisplay.html
+++ b/flaskProject/templates/worddisplay.html
@@ -25,7 +25,15 @@
                 <td>{{ credential[3] }}</td>
                 <td>{{ credential[4] }}</td>
                 <td>{{ credential[5] }}</td>
-                <td><img src="/static/images/{{ credential[6] }}"></td>
+                <td>
+                    {% if credential[6] %}
+                        <img src="/static/images/{{ credential[6] }}">
+                    {% else %}
+                        <img src="/static/images/noimage.png">
+                    {% endif %}
+                </td>
+
+
                 <td>{{ credential[7] }}</td>
                 <td>{{ credential[8] }}</td>
             </tr>
