--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -28,13 +28,14 @@
                         {% for category in categories %}
                         <a href="/category/{{ category[0] }}">{{ category[1] }}</a><br>
                         {% endfor %}
-
+						<a href="/addword">Add A Word</a>
+						<a href="/removeword">Remove A Word</a>
 						{% if logged_in == None %}
 						<a href="/login">Login</a>
 						{% else %}
 						<a href="/login">Switch Accounts</a>
 						{%endif%}
-						<a href="/addword">Add A Word</a>
+
 					</div>
 			</div>
 		</nav>
