--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -28,8 +28,8 @@
                         {% for category in categories %}
                         <a href="/category/{{ category[0] }}">{{ category[1] }}</a><br>
                         {% endfor %}
+						{% if loggen_in ==
 						<a href="/addword">Add A Word</a>
-						<a href="/removeword">Remove A Word</a>
 						{% if logged_in == None %}
 						<a href="/login">Login</a>
 						{% else %}
