--- a/flaskProject/templates/add.html
+++ b/flaskProject/templates/add.html
@@ -5,11 +5,11 @@
 {% block main %}
 <form class="myform" method="POST" action="/addword">
   <h4>Maori Word</h4>
-  <input type="text" name="maori_text" id="maori_text">
+  <input type="text" name="maori_text" id="maori_text" required minlength="2" maxlength="30">
   <h4>English Translation</h4>
-  <input type="text" name="english_text" id="english_text">
+  <input type="text" name="english_text" id="english_text" required minlength="2" maxlength="30">
   <h4>Definition</h4>
-  <input type="text" name="definition_text" id="definition_text">
+  <input type="text" name="definition_text" id="definition_text" required maxlength="500">
   <h4>Category</h4>
   <input type="number" name="category_text" id="category_text">
   <h4>Level</h4>
