--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -28,12 +28,13 @@
                         {% for category in categories %}
                         <a href="/category/{{ category[0] }}">{{ category[1] }}</a><br>
                         {% endfor %}
-						{% if loggen_in ==
+						{% if logged_in == 2 %}
 						<a href="/addword">Add A Word</a>
+						{% endif %}
 						{% if logged_in == None %}
 						<a href="/login">Login</a>
 						{% else %}
-						<a href="/login">Switch Accounts</a>
+						<a href="/logout">Logout</a>
 						{%endif%}
 
 					</div>
