--- a/flaskProject/templates/signup.html
+++ b/flaskProject/templates/signup.html
@@ -6,17 +6,17 @@
 <form class="myform" method="post">
     <div class="form-group">
         <div class="form-label">First Name:</div>
-        <div class="form-element"><input type="text" name="first_name" id="first_name" required></div>
+        <div class="form-element"><input type="text" name="first_name" id="first_name" required maxlength="30"></div>
     </div>
     <div class="error">{{ first_name_error }}</div>
     <div class="form-group">
         <div class="form-label">Last Name:</div>
-        <div class="form-element"><input type="text" name="last_name" id="last_name" required></div>
+        <div class="form-element"><input type="text" name="last_name" id="last_name" required maxlength="30"></div>
     </div>
     <div class="error">{{ last_name_error }}</div>
     <div class="form-group">
         <div class="form-label">Email:</div>
-        <div class="form-element"><input type="email" name="email" id="email" required></div>
+        <div class="form-element"><input type="email" name="email" id="email" required maxlength="80"></div>
     </div>
     <div class="form-group">
         <div class="form-label">Password:</div>
