Now only teachers can add/delete words

--- a/flaskProject/templates/add.html
+++ b/flaskProject/templates/add.html
@@ -11,9 +11,9 @@
   <h4>Definition</h4>
   <input type="text" name="definition_text" id="definition_text" required maxlength="500">
   <h4>Category</h4>
-  <input type="number" name="category_text" id="category_text">
+  <input type="number" name="category_text" id="category_text" required>
   <h4>Level</h4>
-  <input type="number" name="level_text" id="level_text">
+  <input type="number" name="level_text" id="level_text" required>
   <div class="form-group">
         <div class="form-label">Submit:</div>
         <div class="form-element"><input type="submit" value="Submit"></div>
