--- a/flaskProject/templates/base.html
+++ b/flaskProject/templates/base.html
@@ -28,8 +28,8 @@
                         {% for category in categories %}
                         <a href="/category/{{ category[0] }}">{{ category[1] }}</a><br>
                         {% endfor %}
-						{% if logged_in == 2 %}
-						<a href="/addword">Add A Word</a>
+						{% if logged_in == 1 %}
+						<a href="/addword">Add A Word</a><br>
 						{% endif %}
 						{% if logged_in == None %}
 						<a href="/login">Login</a>
