--- a/flaskProject/templates/worddisplay.html
+++ b/flaskProject/templates/worddisplay.html
@@ -37,10 +37,12 @@
             <td>{{ credential[7] }}</td>
             <td>{{ credential[8] }}</td>
         </tr>
+        {% if logged_in == 1 %}
         <form method="post" action="/removeword" onsubmit="return confirm('Are you sure you want to delete this word?');">
             <input type="hidden" value="{{ credential[0] }}" name="removal_id" id="removal_id">
-            <input type="submit" value="Do you want to delete this word?">
+            <input type="submit" value="Delete this word?">
         </form>
+        {% endif %}
     {% endfor %}
     </tbody>
 </table>
