--- a/flaskProject/templates/signup.html
+++ b/flaskProject/templates/signup.html
@@ -29,8 +29,8 @@
     </div>
     <div class="form-group">
         <div class="form-label">Student or Teacher:</div>
-        <input type="radio" name="user-type" id="student" value="1" required>
-        <input type="radio" name="user-type" id="teacher" value="2" required>
+        <input type="radio" name="user-type" id="student" value="1" required><label for="student">Student</label>
+        <input type="radio" name="user-type" id="teacher" value="2" required><label for="teacher">Teacher</label>
     </div>
     <div class="error">{{ error }}</div>
     <div class="form-group">
